# ftxui-project-template

./: CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  foo.cpp
include/foo/: CMakeLists.txt  foo.h
src/: foo.cpp  main.cpp
